# bio---numcalc

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NumCalc.spec  autoclean.sh  config.cache  config.status  configure  configure.ac  configure.in  libtool  mkinstalldirs
NumCalc/: AbstractDiscreteDistribution.cpp  AbstractDiscreteDistribution.h  AbstractNumericalDerivative.h  AbstractOptimizer.cpp  AbstractOptimizer.h  AbstractOptimizer.lo  AbstractParametrizable.cpp  AbstractParametrizable.h  AutoParameter.cpp  AutoParameter.h  AutoParameter.lo  BrentOneDimension.cpp  BrentOneDimension.h  BrentOneDimension.lo  ConjugateGradientMultiDimensions.cpp  ConjugateGradientMultiDimensions.h  ConstantDistribution.cpp  ConstantDistribution.h  ConstantDistribution.lo  Constraints.cpp  Constraints.h  Constraints.lo  DataTable.cpp  DataTable.h  DataTableExceptions.h  DirectionFunction.cpp  DirectionFunction.h  DiscreteDistribution.cpp  DiscreteDistribution.h  DiscreteDistribution.lo  Domain.cpp  Domain.h  Domain.lo  DownhillSimplexMethod.cpp  DownhillSimplexMethod.h  DownhillSimplexMethod.lo  EigenValue.h  ExponentialDiscreteDistribution.cpp  ExponentialDiscreteDistribution.h  FivePointsNumericalDerivative.cpp  (+93 more)
NumCalc/.deps/: AbstractOptimizer.P  AutoParameter.P  BrentOneDimension.P  ConstantDistribution.P  Constraints.P  DiscreteDistribution.P  Domain.P  DownhillSimplexMethod.P  Functions.P  GammaDiscreteDistribution.P  GoldenSectionSearch.P  IntervalData.P  MultiDimensionsOptimizationTools.P  NumTools.P  OneDimensionOptimizationTools.P  OptimizationStopCondition.P  Optimizer.P  Parameter.P  ParameterExceptions.P  ParameterList.P  Parametrizable.P  PowellMultiDimensions.P  RandomTools.P  VectorTools.P
NumCalc/.libs/: libnumcalc.lai  libnumcalc.so.1.0.0
debian/: changelog  control
