AC_INIT(Bio++ NumCalc, 1.1.0, Julien.Dutheil@univ-montp2.fr, Bpp-NumCalc)
AC_CONFIG_SRCDIR(NumCalc/NumTools.h)
AM_INIT_AUTOMAKE()
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(bpp-utils, main, , [AC_MSG_ERROR([Library bpp-utils not found.])])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_OUTPUT(Makefile NumCalc/Makefile)
